feat: add piraeus hr
https://github.com/piraeusdatastore/helm-charts

--- a/kubernetes/flux/meta/repositories/helm/kustomization.yaml
+++ b/kubernetes/flux/meta/repositories/helm/kustomization.yaml
@@ -15,6 +15,7 @@ resources:
   - ./k8s-gateway.yaml
   - ./metrics-server.yaml
   - ./openebs.yaml
+  - ./piraeus.yaml
   - ./prometheus-community.yaml
   - ./rook-ceph.yaml
   - ./spegel.yaml
