--- a/kubernetes/apps/actions-runner-system/kustomization.yaml
+++ b/kubernetes/apps/actions-runner-system/kustomization.yaml
@@ -6,3 +6,11 @@ resources:
   - ./actions-runner-controller/ks.yaml
 components:
   - ../../flux/components/namespace
+patches:
+  - # Add the name to the namespace
+    patch: |
+      - op: add
+        path: /metadata/name
+        value: actions-runner-system
+    target:
+      kind: Namespace
