feat: use abs paths to helm-values (#105)
* feat(helmfile): use abs paths to helm-values

- https://github.com/onedr0p/cluster-template/commit/ab4e969fb32415a66435ab7d6da19c2bd61ac163

* feat: bootstrap all namespaces and secrets

https://github.com/onedr0p/cluster-template/commit/cc3613ac78899f3651b61381508d344951b48a09

* enable enable-aggregator-routing on apiserver

- update bootstrap config
- update mise deps

--- a/.mise.toml
+++ b/.mise.toml
@@ -1,5 +1,6 @@
 [env]
 _.python.venv = { path = "{{config_root}}/.venv", create = true }
+KUBERNETES_DIR = '{{config_root}}/kubernetes'
 KUBECONFIG = "{{config_root}}/kubeconfig"
 SOPS_AGE_KEY_FILE = "{{config_root}}/age.key"
 TALOSCONFIG = "{{config_root}}/kubernetes/bootstrap/talos/clusterconfig/talosconfig"
@@ -11,10 +12,10 @@ run = "uv pip install -r requirements.txt"
 [tools]
 # Template tools
 python = "3.13"
-uv = "0.5.26"
+uv = "0.5.27"
 # Operations tools
-"aqua:budimanjojo/talhelper" = "3.0.16"
-"aqua:cloudflare/cloudflared" = "2025.1.0"
+"aqua:budimanjojo/talhelper" = "3.0.18"
+"aqua:cloudflare/cloudflared" = "2025.2.0"
 "aqua:FiloSottile/age" = "1.2.1"
 "aqua:fluxcd/flux2" = "2.4.0"
 "aqua:getsops/sops" = "3.9.4"
