--- a/kubernetes/apps/actions-runner-system/kustomization.yaml
+++ b/kubernetes/apps/actions-runner-system/kustomization.yaml
@@ -2,15 +2,10 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-resources:
-  - ./actions-runner-controller/ks.yaml
+namespace: actions-runner-system
 components:
   - ../../flux/components/namespace
-patches:
-  - # Add the name to the namespace
-    patch: |
-      - op: add
-        path: /metadata/name
-        value: actions-runner-system
-    target:
-      kind: Namespace
+  - ../../flux/components/sops
+  - ../../flux/components/substitutions
+resources:
+  - ./actions-runner-controller/ks.yaml
