--- a/kubernetes/apps/external-secrets/kustomization.yaml
+++ b/kubernetes/apps/external-secrets/kustomization.yaml
@@ -2,16 +2,11 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: external-secrets
+components:
+  - ../../flux/components/namespace
+  - ../../flux/components/sops
+  - ../../flux/components/substitutions
 resources:
   - ./external-secrets/ks.yaml
   - ./onepassword/ks.yaml
-components:
-  - ../../flux/components/namespace
-patches:
-  - # Add the name to the namespace
-    patch: |
-      - op: add
-        path: /metadata/name
-        value: external-secrets
-    target:
-      kind: Namespace
