--- a/kubernetes/apps/rook-ceph/rook-ceph/ks.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/ks.yaml
@@ -4,14 +4,14 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app rook-ceph
-  namespace: flux-system
+  namespace: &namespace rook-ceph
 spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: onepassword-store
-      namespace: flux-system
+      namespace: external-secrets
   interval: 30m
   path: ./kubernetes/apps/rook-ceph/rook-ceph/app
   prune: false
@@ -19,7 +19,7 @@ spec:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
-  targetNamespace: rook-ceph
+  targetNamespace: *namespace
   timeout: 5m
   wait: false
 # ---
@@ -28,14 +28,14 @@ spec:
 # kind: Kustomization
 # metadata:
 #   name: &app rook-ceph-cluster
-#   namespace: flux-system
+#   namespace: &namespace rook-ceph
 # spec:
 #   commonMetadata:
 #     labels:
 #       app.kubernetes.io/name: *app
 #   dependsOn:
 #     - name: onepassword-store
-#       namespace: flux-system
+#       namespace: external-secrets
 #   interval: 30m
 #   path: ./kubernetes/apps/rook-ceph/rook-ceph/cluster
 #   postBuild:
@@ -46,6 +46,6 @@ spec:
 #     kind: GitRepository
 #     name: flux-system
 #     namespace: flux-system
-#   targetNamespace: rook-ceph
+#   targetNamespace: *namespace
 #   timeout: 15m
 #   wait: false
