--- a/kubernetes/apps/volsync-system/kustomization.yaml
+++ b/kubernetes/apps/volsync-system/kustomization.yaml
@@ -4,8 +4,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: volsync-system
 components:
-  - ../../flux/components/namespace
-  - ../../flux/components/sops
-  - ../../flux/components/substitutions
+  - ../../flux/components/common
 resources:
   - ./snapshot-controller/ks.yaml
