--- a/kubernetes/flux/components/common/cluster-settings.yaml
+++ b/kubernetes/flux/components/common/cluster-settings.yaml
@@ -4,5 +4,5 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: cluster-settings
-data:
-  SETTING_EXAMPLE: This value will be available to all YAML resources as ${SETTING_EXAMPLE}
+  namespace: flux-system
+data: {}
