--- a/kubernetes/bootstrap/apps/helmfile.yaml
+++ b/kubernetes/bootstrap/apps/helmfile.yaml
@@ -16,8 +16,8 @@ repositories:
 
 hooks:
     - events: ['prepare']
-      command: bash
-      args: ['{{ requiredEnv "KUBERNETES_DIR" }}/bootstrap/apps/hooks/prometheus-operator-crds.sh']
+      command: '{{ requiredEnv "KUBERNETES_DIR" }}/bootstrap/apps/hooks/bootstrap.sh'
+      showlogs: true
 
 releases:
   - name: cilium
@@ -25,10 +25,6 @@ releases:
     chart: cilium/cilium
     version: 1.16.6
     values: ['{{ requiredEnv "KUBERNETES_DIR" }}/apps/kube-system/cilium/app/helm-values.yaml']
-    hooks:
-    - events: ['presync']
-      command: bash
-      args: ['{{ requiredEnv "KUBERNETES_DIR" }}/bootstrap/apps/hooks/cilium-config.sh']
 
   - name: coredns
     namespace: kube-system
