--- a/kubernetes/bootstrap/apps/helmfile.yaml
+++ b/kubernetes/bootstrap/apps/helmfile.yaml
@@ -14,22 +14,17 @@ repositories:
   - name: jetstack
     url: https://charts.jetstack.io
 
-releases:
-  - name: prometheus-operator-crds
-    namespace: kube-system
-    chart: oci://ghcr.io/prometheus-community/charts/prometheus-operator-crds
-    version: 17.0.2
-    values:
-      - crds:
-          annotations:
-            helm.sh/resource-policy: keep
+hooks:
+    - events: ['prepare']
+      command: '{{ requiredEnv "KUBERNETES_DIR" }}/bootstrap/apps/hooks/bootstrap.sh'
+      showlogs: true
 
+releases:
   - name: cilium
     namespace: kube-system
     chart: cilium/cilium
     version: 1.16.6
     values: ['{{ requiredEnv "KUBERNETES_DIR" }}/apps/kube-system/cilium/app/helm-values.yaml']
-    needs: ['kube-system/prometheus-operator-crds']
 
   - name: coredns
     namespace: kube-system
