--- a/kubernetes/apps/observability/gatus/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/gatus/app/helmrelease.yaml
@@ -22,6 +22,9 @@ spec:
     remediation:
       strategy: rollback
       retries: 3
+  dependsOn:
+  - name: openebs
+    namespace: openebs-system
   values:
     controllers:
       gatus:
@@ -87,7 +90,6 @@ spec:
         runAsGroup: 1000
         fsGroup: 1000
         fsGroupChangePolicy: OnRootMismatch
-        seccompProfile: { type: RuntimeDefault }
     service:
       app:
         controller: gatus
@@ -110,6 +112,8 @@ spec:
       create: true
       name: gatus
     persistence:
+      config:
+        existingClaim: gatus
       config-file:
         type: configMap
         name: gatus-configmap
