--- a/.mise.toml
+++ b/.mise.toml
@@ -15,13 +15,14 @@ python = "3.13"
 uv = "latest"
 # Operations tools
 "aqua:budimanjojo/talhelper" = "3.0.18"
+"aqua:charmbracelet/gum" = "v0.15.2"
 "aqua:cloudflare/cloudflared" = "2025.2.0"
 "aqua:FiloSottile/age" = "1.2.1"
 "aqua:fluxcd/flux2" = "2.4.0"
 "aqua:getsops/sops" = "3.9.4"
 "aqua:go-task/task" = "3.41.0"
 "aqua:helm/helm" = "3.17.1"
-"aqua:helmfile/helmfile" = "0.170.1"
+"aqua:helmfile/helmfile" = "0.171.0"
 "aqua:jqlang/jq" = "1.7.1"
 "aqua:kubernetes-sigs/kustomize" = "5.6.0"
 "aqua:kubernetes/kubectl" = "1.32.1"
