--- a/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -75,11 +75,9 @@ spec:
         config:
           osdsPerDevice: "1"
         nodes:
-          - name: "mbp-node-01"
+          - name: "mba-node-01"
             devices:
-              - name: "/dev/sdb"
               - name: "/dev/sdc"
-              - name: "/dev/sdd"
     cephBlockPools:
       - name: ceph-blockpool
         spec:
