--- a/kubernetes/apps/rook-ceph/rook-ceph/ks.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/ks.yaml
@@ -33,6 +33,8 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
+  components:
+  - ../../../../components/gatus/guarded
   dependsOn:
     - name: onepassword-store
       namespace: external-secrets
@@ -41,6 +43,7 @@ spec:
   postBuild:
     substitute:
       APP: *app
+      GATUS_SUBDOMAIN: rook
   prune: false
   sourceRef:
     kind: GitRepository
