install prom operator crds via talhelper
- add onepassword check as a part of bootstrap
- formatting
- renovate updates

--- a/.github/workflows/flux-local.yaml
+++ b/.github/workflows/flux-local.yaml
@@ -7,6 +7,7 @@ on:
     branches: ["main"]
     paths:
       - kubernetes/apps/**
+      - kubernetes/components/**
       - kubernetes/flux/**
 
 concurrency:
