--- a/.mise.toml
+++ b/.mise.toml
@@ -1,12 +1,13 @@
 [env]
 _.python.venv = { path = "{{config_root}}/.venv", create = true }
-BOOTSTRAP_DIR = '{{config_root}}/bootstrap'
+BOOTSTRAP_DIR = "{{config_root}}/bootstrap"
 KUBECONFIG = "{{config_root}}/kubeconfig"
-KUBERNETES_DIR = '{{config_root}}/kubernetes'
+KUBERNETES_DIR = "{{config_root}}/kubernetes"
 ROOT_DIR = "{{config_root}}"
-SCRIPTS_DIR = '{{config_root}}/scripts'
+SCRIPTS_DIR = "{{config_root}}/scripts"
+SOPS_EDITOR = "nano"
 SOPS_AGE_KEY_FILE = "{{config_root}}/age.key"
-TALOS_DIR = '{{config_root}}/talos'
+TALOS_DIR = "{{config_root}}/talos"
 TALOSCONFIG = "{{config_root}}/talos/clusterconfig/talosconfig"
 
 [tasks.deps]
