feat: install prom operator crds via talhelper + task updates (#138)
* task updates

- https://github.com/onedr0p/cluster-template/commit/a1d66fc080c87bbf6eabf0ab533d1130b9d003c9

* install prom operator crds via talhelper

- add onepassword check as a part of bootstrap
- formatting
- renovate updates

* cilium: remove default tolerations to fix ContainerStatusUnknown

- https://github.com/onedr0p/cluster-template/commit/5461b56d474e1b7f7843bb341f39c837f2a06316

* chores

- https://github.com/onedr0p/cluster-template/commit/f7ac8394808c62afa5d251385b1cb8d0ee7434ea

--- a/.mise.toml
+++ b/.mise.toml
@@ -1,12 +1,13 @@
 [env]
 _.python.venv = { path = "{{config_root}}/.venv", create = true }
-BOOTSTRAP_DIR = '{{config_root}}/bootstrap'
+BOOTSTRAP_DIR = "{{config_root}}/bootstrap"
 KUBECONFIG = "{{config_root}}/kubeconfig"
-KUBERNETES_DIR = '{{config_root}}/kubernetes'
+KUBERNETES_DIR = "{{config_root}}/kubernetes"
 ROOT_DIR = "{{config_root}}"
-SCRIPTS_DIR = '{{config_root}}/scripts'
+SCRIPTS_DIR = "{{config_root}}/scripts"
+SOPS_EDITOR = "nano"
 SOPS_AGE_KEY_FILE = "{{config_root}}/age.key"
-TALOS_DIR = '{{config_root}}/talos'
+TALOS_DIR = "{{config_root}}/talos"
 TALOSCONFIG = "{{config_root}}/talos/clusterconfig/talosconfig"
 
 [tasks.deps]
@@ -21,7 +22,7 @@ uv = "latest"
 "aqua:budimanjojo/talhelper" = "3.0.19"
 "aqua:cloudflare/cloudflared" = "2025.2.0"
 "aqua:FiloSottile/age" = "1.2.1"
-"aqua:fluxcd/flux2" = "2.4.0"
+"aqua:fluxcd/flux2" = "2.5.0"
 "aqua:getsops/sops" = "3.9.4"
 "aqua:go-task/task" = "3.41.0"
 "aqua:helm/helm" = "3.17.1"
