--- a/kubernetes/apps/observability/kube-prometheus-stack/app/alertmanagerconfig.yaml
+++ b/kubernetes/apps/observability/kube-prometheus-stack/app/alertmanagerconfig.yaml
@@ -17,14 +17,6 @@ spec:
           - name: alertname
             value: InfoInhibitor
             matchType: =
-      - receiver: heartbeat
-        groupInterval: 5m
-        groupWait: 0s
-        repeatInterval: 5m
-        matchers:
-          - name: alertname
-            value: Watchdog
-            matchType: =
       - receiver: pushover
         matchers:
           - name: severity
@@ -73,7 +65,7 @@ spec:
             {{ .CommonLabels.alertname }}
           ttl: 86400s
           token:
-            name: *secret
+            name: &secret alertmanager-secret
             key: ALERTMANAGER_PUSHOVER_TOKEN
           userKey:
             name: *secret
