--- a/bootstrap/helmfile.yaml
+++ b/bootstrap/helmfile.yaml
@@ -2,12 +2,23 @@
 # yaml-language-server: $schema=https://json.schemastore.org/helmfile
 
 helmDefaults:
-  timeout: 600
-  force: true
+  cleanupOnFail: true
   wait: true
   waitForJobs: true
 
 repositories:
+  - name: controlplaneio
+    url: ghcr.io/controlplaneio-fluxcd/charts
+    oci: true
+
+  - name: coredns
+    url: ghcr.io/coredns/charts
+    oci: true
+
+  - name: external-secrets
+    url: ghcr.io/external-secrets/external-secrets
+    oci: true
+
   - name: cilium
     url: https://helm.cilium.io
 
@@ -17,19 +28,22 @@ repositories:
 releases:
   - name: cilium
     namespace: kube-system
+    atomic: true
     chart: cilium/cilium
     version: 1.16.7
     values: ['{{ requiredEnv "ROOT_DIR" }}/kubernetes/apps/kube-system/cilium/app/helm-values.yaml']
 
   - name: coredns
     namespace: kube-system
-    chart: oci://ghcr.io/coredns/charts/coredns
+    atomic: true
+    chart: coredns/coredns
     version: 1.39.1
     values: ['{{ requiredEnv "ROOT_DIR" }}/kubernetes/apps/kube-system/coredns/app/helm-values.yaml']
     needs: ['kube-system/cilium']
 
   - name: cert-manager
     namespace: cert-manager
+    atomic: true
     chart: jetstack/cert-manager
     version: v1.17.1
     values: ['{{ requiredEnv "ROOT_DIR" }}/kubernetes/apps/cert-manager/cert-manager/app/helm-values.yaml']
@@ -37,21 +51,24 @@ releases:
 
   - name: external-secrets
     namespace: external-secrets
-    chart: oci://ghcr.io/external-secrets/charts/external-secrets
+    atomic: true
+    chart: external-secrets/external-secrets
     version: 0.14.3
     values: ['{{ requiredEnv "ROOT_DIR" }}/kubernetes/apps/external-secrets/external-secrets/app/helm-values.yaml']
     needs: ['cert-manager/cert-manager']
 
   - name: flux-operator
     namespace: flux-system
-    chart: oci://ghcr.io/controlplaneio-fluxcd/charts/flux-operator
+    atomic: true
+    chart: controlplaneio/flux-operator
     version: 0.17.0
     values: ['{{ requiredEnv "ROOT_DIR" }}/kubernetes/apps/flux-system/flux-operator/app/helm-values.yaml']
     needs: ['cert-manager/cert-manager']
 
   - name: flux-instance
     namespace: flux-system
-    chart: oci://ghcr.io/controlplaneio-fluxcd/charts/flux-instance
+    atomic: true
+    chart: controlplaneio/flux-instance
     version: 0.17.0
     wait: false
     values: ['{{ requiredEnv "ROOT_DIR" }}/kubernetes/apps/flux-system/flux-operator/instance/helm-values.yaml']
