--- a/kubernetes/apps/flux-system/flux-operator/instance/kustomization.yaml
+++ b/kubernetes/apps/flux-system/flux-operator/instance/kustomization.yaml
@@ -5,6 +5,7 @@ kind: Kustomization
 resources:
   - ./github
   - ./helmrelease.yaml
+  - ./helmrepository.yaml
 configMapGenerator:
   - name: flux-instance-helm-values
     files:
