--- a/kubernetes/apps/kube-system/reloader/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/reloader/app/helmrelease.yaml
@@ -5,15 +5,11 @@ kind: HelmRelease
 metadata:
   name: reloader
 spec:
-  interval: 30m
-  chart:
-    spec:
-      chart: reloader
-      version: 1.3.0
-      sourceRef:
-        kind: HelmRepository
-        name: stakater
-        namespace: flux-system
+  interval: 1h
+  chartRef:
+    kind: OCIRepository
+    name: reloader
+    namespace: kube-system
   install:
     remediation:
       retries: 3
