--- a/talos/patches/global/machine-kubelet.yaml
+++ b/talos/patches/global/machine-kubelet.yaml
@@ -1,5 +1,7 @@
 machine:
   kubelet:
+    extraConfig:
+      serializeImagePulls: false
     extraMounts:
       - destination: /var/openebs/local
         type: bind
