--- a/kubernetes/flux/cluster/ks.yaml
+++ b/kubernetes/flux/cluster/ks.yaml
@@ -43,7 +43,7 @@ spec:
     substituteFrom:
       - name: cluster-settings
         kind: ConfigMap
-        optional: false
+        optional: true
       - name: cluster-secrets
         kind: Secret
         optional: false
@@ -68,7 +68,7 @@ spec:
             substituteFrom:
               - name: cluster-settings
                 kind: ConfigMap
-                optional: false
+                optional: true
               - name: cluster-secrets
                 kind: Secret
                 optional: false
