refactor: flux-system

--- a/kubernetes/apps/flux-system/kustomization.yaml
+++ b/kubernetes/apps/flux-system/kustomization.yaml
@@ -6,4 +6,5 @@ namespace: flux-system
 components:
   - ../../components/common
 resources:
+  - ./flux-instance/ks.yaml
   - ./flux-operator/ks.yaml
