--- a/kubernetes/apps/flux-system/flux-instance/ks.yaml
+++ b/kubernetes/apps/flux-system/flux-instance/ks.yaml
@@ -3,15 +3,15 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app flux-operator
+  name: &app flux-instance
   namespace: &namespace flux-system
 spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
   interval: 1h
-  path: ./kubernetes/apps/flux-system/flux-operator/app
-  prune: false # never should be deleted
+  path: ./kubernetes/apps/flux-system/flux-instance/app
+  prune: false # let's not make happy accidents
   retryInterval: 2m
   sourceRef:
     kind: GitRepository
