--- a/kubernetes/apps/flux-system/flux-operator/app/kustomization.yaml
+++ b/kubernetes/apps/flux-system/flux-operator/app/kustomization.yaml
@@ -6,8 +6,8 @@ resources:
   - ./helmrelease.yaml
   - ./helmrepository.yaml
 configMapGenerator:
-  - name: flux-operator-helm-values
+  - name: flux-operator-values
     files:
-      - values.yaml=./helm-values.yaml
+      - values.yaml=./helm/values.yaml
 configurations:
-  - kustomizeconfig.yaml
+  - ./helm/kustomizeconfig.yaml
