refactor: coredns directories

--- a/kubernetes/apps/kube-system/coredns/app/kustomization.yaml
+++ b/kubernetes/apps/kube-system/coredns/app/kustomization.yaml
@@ -6,8 +6,8 @@ resources:
   - ./helmrelease.yaml
   - ./helmrepository.yaml
 configMapGenerator:
-  - name: coredns-helm-values
+  - name: coredns-values
     files:
-      - values.yaml=./helm-values.yaml
+      - values.yaml=./helm/values.yaml
 configurations:
-  - kustomizeconfig.yaml
+  - ./helm/kustomizeconfig.yaml
