--- a/.github/workflows/helm-repository-sync.yaml
+++ b/.github/workflows/helm-repository-sync.yaml
@@ -3,70 +3,78 @@
 name: "Helm Repository Sync"
 
 on:
-  workflow_dispatch:
-    inputs:
-      helmRepoNamespace:
-        description: Helm Repository Namespace
-        default: flux-system
-        required: true
-      helmRepoName:
-        description: Helm Repository Name
-        required: true
   pull_request:
     branches: ["main"]
-    paths: ["kubernetes/**/helmrelease.yaml"]
 
-env:
-  HOMEBREW_NO_ANALYTICS: "1"
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.number || github.ref }}
+  cancel-in-progress: true
 
 jobs:
-  sync:
-    name: Helm Repository Sync
-    runs-on: ["home-ops-runner"]
+  pre-job:
+    name: Helm Repo Sync - Pre-Job
+    runs-on: ubuntu-latest
+    outputs:
+      any_changed: ${{ steps.changed-files.outputs.any_changed }}
+      all_changed_and_modified_files: ${{ steps.changed-files.outputs.all_changed_and_modified_files }}
     steps:
-      - name: Generate Token
-        uses: actions/create-github-app-token@v1
-        id: app-token
-        with:
-          app-id: "${{ secrets.BOT_APP_ID }}"
-          private-key: "${{ secrets.BOT_APP_PRIVATE_KEY }}"
-
       - name: Checkout
         uses: actions/checkout@v4
-        with:
-          token: "${{ steps.app-token.outputs.token }}"
 
-      - name: Setup Homebrew
-        uses: Homebrew/actions/setup-homebrew@master
-
-      - name: Setup Workflow Tools
-        run: brew install fluxcd/tap/flux
-
-      - if: ${{ github.event.inputs.helmRepoNamespace == '' && github.event.inputs.helmRepoName == '' }}
-        name: Get Changed Files
+      - name: Get Changed Files
         id: changed-files
         uses: tj-actions/changed-files@v45
         with:
           files: kubernetes/**/helmrelease.yaml
-          safe_output: false
 
-      - if: ${{ github.event.inputs.helmRepoNamespace == '' && github.event.inputs.helmRepoName == '' }}
-        name: Sync Helm Repository
-        run: |
-          declare -A repos=()
-          for f in ${{ steps.changed-files.outputs.all_changed_and_modified_files }}; do
-              repo_namespace="$(yq -r '.spec.chart.spec.sourceRef.namespace' "${f}")"
-              repo_name="$(yq -r '.spec.chart.spec.sourceRef.name' "${f}")"
-              repos["${repo_namespace}:${repo_name}"]=1
-          done
-          for r in "${!repos[@]}"; do
-              IFS=':' read -r repo_namespace repo_name <<< "${r}"
-              flux --namespace ${repo_namespace} \
-                  reconcile source helm ${repo_name} || true
-          done
+  extract:
+    name: Helm Repo Sync - Extract Helm Repos
+    if: ${{ needs.pre-job.outputs.any_changed == 'true' }}
+    needs: pre-job
+    runs-on: ubuntu-latest
+    outputs:
+      repos: ${{ steps.extract.outputs.repos }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - if: ${{ github.event.inputs.helmRepoNamespace != '' && github.event.inputs.helmRepoName != '' }}
-        name: Sync Helm Repository
+      - name: Extract Repos
+        id: extract
+        env:
+          FILTER: '[.spec.chart.spec.sourceRef] | map_values("\(.namespace),\(.name)") | unique'
         run: |
-          flux --namespace ${{ github.event.inputs.helmRepoNamespace }} \
-              reconcile source helm ${{ github.event.inputs.helmRepoName }} || true
+          repos=$(yq --indent 0 --output-format json eval-all "${FILTER}" ${{ needs.pre-job.outputs.all_changed_and_modified_files }})
+          echo "repos=${repos}" >> $GITHUB_OUTPUT
+
+          echo '## Helm Repos' >> $GITHUB_STEP_SUMMARY
+          echo '```json' >> $GITHUB_STEP_SUMMARY
+          echo $repos | jq >> $GITHUB_STEP_SUMMARY
+          echo '```' >> $GITHUB_STEP_SUMMARY
+
+  sync:
+    name: Helm Repo Sync - Sync Helm Repos
+    needs: ["pre-job", "extract"]
+    runs-on: home-ops-runner
+    if: ${{ needs.pre-job.outputs.any_changed == 'true' && needs.extract.outputs.repos != '[]' }}
+    steps:
+      - name: Install flux
+        run: curl -fsSL https://fluxcd.io/install.sh | bash
+
+      - name: Sync Helm Repos
+        run: |
+          jq --raw-output '.[] | split(",") | "\(.[0]) \(.[1])"' <<< '${{ needs.extract.outputs.repos }}' \
+              | xargs -l bash -c 'flux --namespace $0 reconcile source helm $1'
+
+  status:
+    name: Helm Repo Sync - Success
+    if: ${{ always() }}
+    needs: sync
+    runs-on: ubuntu-latest
+    steps:
+      - name: Any jobs failed?
+        if: ${{ contains(needs.*.result, 'failure') }}
+        run: exit 1
+
+      - name: All jobs passed or skipped?
+        if: ${{ !(contains(needs.*.result, 'failure')) }}
+        run: echo "All jobs passed or skipped" && echo "${{ toJSON(needs.*.result) }}"
