refactor: update helmfile, introduce oci repositories, and more (#147)
* feat: update helmfile and introduce oci repositories

https://github.com/onedr0p/cluster-template/commit/8df1738b426cfa06a2f15111001c6f99445b3c29

* migrate remaining OCI repos

note: arc needs to be helmrepository

* script: remove cluster settings file

* update spegel helm config

* feat(kubelet): enable concurrent image pulls

* update flux ks intervals

* fix: cluster-settings is optional

* fix: spegel url

* refactor: reorganize helmfile flux apps

* refactor: flux-system

* refactor: cilium directories

* refactor: coredns directories

* refactor: external-secrets directories

--- a/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
@@ -5,7 +5,7 @@ kind: HelmRelease
 metadata:
   name: cilium
 spec:
-  interval: 30m
+  interval: 1h
   chart:
     spec:
       chart: cilium
@@ -23,7 +23,7 @@ spec:
       retries: 3
   valuesFrom:
     - kind: ConfigMap
-      name: cilium-helm-values
+      name: cilium-values
   values:
     operator:
       tolerations: []
