--- a/kubernetes/apps/flux-system/flux-operator/app/helmrelease.yaml
+++ b/kubernetes/apps/flux-system/flux-operator/app/helmrelease.yaml
@@ -5,15 +5,11 @@ kind: HelmRelease
 metadata:
   name: flux-operator
 spec:
-  interval: 30m
-  chart:
-    spec:
-      chart: flux-operator
-      version: 0.17.0
-      sourceRef:
-        kind: HelmRepository
-        name: controlplaneio
-        namespace: flux-system
+  interval: 1h
+  chartRef:
+    kind: OCIRepository
+    name: flux-operator
+    namespace: flux-system
   install:
     remediation:
       retries: 3
@@ -24,4 +20,4 @@ spec:
       retries: 3
   valuesFrom:
     - kind: ConfigMap
-      name: flux-operator-helm-values
+      name: flux-operator-values
