--- a/kubernetes/apps/kube-system/coredns/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/coredns/app/helmrelease.yaml
@@ -5,15 +5,11 @@ kind: HelmRelease
 metadata:
   name: coredns
 spec:
-  interval: 30m
-  chart:
-    spec:
-      chart: coredns
-      version: 1.39.1
-      sourceRef:
-        kind: HelmRepository
-        name: coredns
-        namespace: flux-system
+  interval: 1h
+  chartRef:
+    kind: OCIRepository
+    name: coredns
+    namespace: kube-system
   install:
     remediation:
       retries: 3
@@ -24,4 +20,4 @@ spec:
       retries: 3
   valuesFrom:
     - kind: ConfigMap
-      name: coredns-helm-values
+      name: coredns-values
