--- a/kubernetes/flux/cluster/ks.yaml
+++ b/kubernetes/flux/cluster/ks.yaml
@@ -10,9 +10,10 @@ spec:
     provider: sops
     secretRef:
       name: sops-age
-  interval: 30m
+  interval: 1h
   path: ./kubernetes/flux/meta
   prune: true
+  retryInterval: 2m
   sourceRef:
     kind: GitRepository
     name: flux-system
@@ -35,17 +36,18 @@ spec:
   dependsOn:
     - name: cluster-meta
       namespace: flux-system
-  interval: 30m
+  interval: 1h
   path: ./kubernetes/apps
   prune: true
   postBuild:
     substituteFrom:
       - name: cluster-settings
         kind: ConfigMap
-        optional: false
+        optional: true
       - name: cluster-secrets
         kind: Secret
         optional: false
+  retryInterval: 2m
   sourceRef:
     kind: GitRepository
     name: flux-system
@@ -66,7 +68,7 @@ spec:
             substituteFrom:
               - name: cluster-settings
                 kind: ConfigMap
-                optional: false
+                optional: true
               - name: cluster-secrets
                 kind: Secret
                 optional: false
