feat: combine helmrepo and helmrelease files
- https://github.com/onedr0p/cluster-template/commit/31ff9b0a2e13e658559aa0297a8cb27c9a8a505a

--- a/kubernetes/apps/kube-system/metrics-server/app/helmrepository.yaml
+++ b/kubernetes/apps/kube-system/metrics-server/app/helmrepository.yaml
@@ -4,7 +4,7 @@ apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
   name: metrics-server
-  namespace: flux-system
+  namespace: kube-system # Required for Renovate lookups
 spec:
   interval: 1h
   url: https://kubernetes-sigs.github.io/metrics-server
