--- a/kubernetes/apps/cert-manager/cert-manager/app/helmrepository.yaml
+++ b/kubernetes/apps/cert-manager/cert-manager/app/helmrepository.yaml
@@ -3,8 +3,8 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: openebs
-  namespace: flux-system
+  name: jetstack
+  namespace: cert-manager # Required for Renovate lookups
 spec:
   interval: 1h
-  url: https://openebs.github.io/openebs
+  url: https://charts.jetstack.io
