--- a/kubernetes/apps/kube-system/cilium/app/helmrepository.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helmrepository.yaml
@@ -3,8 +3,8 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: jetstack
-  namespace: flux-system
+  name: cilium
+  namespace: kube-system # Required for Renovate lookups
 spec:
   interval: 1h
-  url: https://charts.jetstack.io
+  url: https://helm.cilium.io
