--- a/kubernetes/apps/openebs-system/openebs/app/helmrepository.yaml
+++ b/kubernetes/apps/openebs-system/openebs/app/helmrepository.yaml
@@ -3,8 +3,8 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: cilium
-  namespace: flux-system
+  name: openebs
+  namespace: openebs-system
 spec:
   interval: 1h
-  url: https://helm.cilium.io
+  url: https://openebs.github.io/openebs
