feat: reorganize repo references, more updates (#157)
* use gcr mirror for coredns

- https://github.com/onedr0p/cluster-template/commit/1dabb2db9852a77104fdf62fbfae27a7ffc668ce

* update mise and renovate config

* feat: combine helmrepo and helmrelease files

- https://github.com/onedr0p/cluster-template/commit/31ff9b0a2e13e658559aa0297a8cb27c9a8a505a

* add gateway-api crds, update prom crds

* deps: add cilium-cli

* migrate ARC repo to actions-runner-system

* fix gatus app-template ref

* fix gatus component ref

* fix: onepassword app-template ref

* update resource order

* cleanup, task utils:pre-commit-validation

--- a/kubernetes/apps/flux-system/flux-instance/ks.yaml
+++ b/kubernetes/apps/flux-system/flux-instance/ks.yaml
@@ -9,9 +9,12 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
+  dependsOn:
+    - name: flux-operator
+      namespace: *namespace
   interval: 1h
   path: ./kubernetes/apps/flux-system/flux-instance/app
-  prune: false # let's not make happy accidents
+  prune: true
   retryInterval: 2m
   sourceRef:
     kind: GitRepository
