update volume config

--- a/kubernetes/apps/default/flame/app/helmrelease.yaml
+++ b/kubernetes/apps/default/flame/app/helmrelease.yaml
@@ -17,6 +17,9 @@ spec:
     remediation:
       strategy: rollback
       retries: 3
+  dependsOn:
+    - name: openebs
+      namespace: openebs-system
   valuesFrom:
     - kind: ConfigMap
       name: flame-values
