--- a/kubernetes/apps/default/flame/app/helm/values.yaml
+++ b/kubernetes/apps/default/flame/app/helm/values.yaml
@@ -1,4 +1,5 @@
 ---
+# yaml-language-server: $schema=https://raw.githubusercontent.com/bjw-s/helm-charts/common-3.7.0/charts/library/common/values.schema.json
 envFrom:
   - secretRef:
       name: flame-secret
@@ -16,11 +17,6 @@ ingress:
               identifier: main
               port: http
 persistence:
-  data:
+  config:
     enabled: true
-    mountPath: /app/data
-    retain: true
-    config:
-      existingClaim: flame
-serviceMonitor:
-  enabled: true
+    existingClaim: flame
