fix: service port definitions

--- a/kubernetes/apps/default/flame/app/helm/values.yaml
+++ b/kubernetes/apps/default/flame/app/helm/values.yaml
@@ -20,3 +20,9 @@ persistence:
   config:
     enabled: true
     existingClaim: flame
+service:
+  main:
+    controller: main
+    ports:
+      http:
+        port: 5005
