fix: service port definitions (#160)
* fix: service port definitions

* use targetPort

--- a/kubernetes/apps/default/flame/app/helm/values.yaml
+++ b/kubernetes/apps/default/flame/app/helm/values.yaml
@@ -20,3 +20,10 @@ persistence:
   config:
     enabled: true
     existingClaim: flame
+service:
+  main:
+    controller: main
+    ports:
+      http:
+        port: &port 5005
+        targetPort: *port
