--- a/kubernetes/apps/network/external/cloudflared/configs/config.yaml
+++ b/kubernetes/apps/network/external/cloudflared/configs/config.yaml
@@ -1,10 +1,10 @@
 ---
 originRequest:
-  originServerName: "external.${SECRET_DOMAIN}"
+  matchSNItoHost: true
 
 ingress:
   - hostname: "${SECRET_DOMAIN}"
-    service: https://external-ingress-nginx-controller.network.svc.cluster.local:443
+    service: &svc https://cilium-gateway-external.kube-system.svc.cluster.local
   - hostname: "*.${SECRET_DOMAIN}"
-    service: https://external-ingress-nginx-controller.network.svc.cluster.local:443
+    service: *svc
   - service: http_status:404
