--- a/kubernetes/apps/network/cloudflare-dns/app/externalsecret.yaml
+++ b/kubernetes/apps/network/cloudflare-dns/app/externalsecret.yaml
@@ -3,16 +3,17 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: internal-external-dns
+  name: cloudflare-dns
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword
   target:
-    name: internal-external-dns-secret
+    name: cloudflare-dns-secret
     template:
       data:
-        UNIFI_API_KEY: "{{ .UNIFI_API_KEY }}"
+        CF_API_TOKEN: "{{ .CLOUDFLARE_DNS_TOKEN }}"
+        CF_ZONE_ID: "{{ .CLOUDFLARE_ZONE_ID }}"
   dataFrom:
     - extract:
-        key: unifi
+        key: cloudflare
