--- a/kubernetes/apps/network/cloudflare-dns/app/helmrelease.yaml
+++ b/kubernetes/apps/network/cloudflare-dns/app/helmrelease.yaml
@@ -3,7 +3,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: &app external-dns
+  name: &app cloudflare-dns
 spec:
   interval: 1h
   chart:
@@ -12,8 +12,8 @@ spec:
       version: 1.15.2
       sourceRef:
         kind: HelmRepository
-        name: external-dns
-        namespace: flux-system
+        name: cloudflare-dns
+        namespace: network
   install:
     crds: CreateReplace
     remediation:
@@ -31,24 +31,30 @@ spec:
       tag: 631b84da
     provider: cloudflare
     env:
-      - name: CF_API_TOKEN
+      - name: &name CF_API_TOKEN
         valueFrom:
           secretKeyRef:
-            name: external-dns-secret
-            key: api-token
+            name: &secret cloudflare-dns-secret
+            key: *name
+      - name: &name CF_ZONE_ID
+        valueFrom:
+          secretKeyRef:
+            name: *secret
+            key: *name
     extraArgs:
       - --cloudflare-dns-records-per-page=1000
       - --cloudflare-proxied
       - --crd-source-apiversion=externaldns.k8s.io/v1alpha1
       - --crd-source-kind=DNSEndpoint
-      - --events
       - --gateway-label-filter=gateway==external
+      - --zone-id-filter=$(CF_ZONE_ID)
     policy: sync
     sources: ["crd", "gateway-httproute"]
+    triggerLoopOnEvent: true
     txtPrefix: k8s.
     txtOwnerId: default
     domainFilters: ["${SECRET_DOMAIN}"]
     serviceMonitor:
       enabled: true
     podAnnotations:
-      secret.reloader.stakater.com/reload: external-dns-secret
+      secret.reloader.stakater.com/reload: *secret
