--- a/kubernetes/apps/network/cloudflare-tunnel/app/kustomization.yaml
+++ b/kubernetes/apps/network/cloudflare-tunnel/app/kustomization.yaml
@@ -4,11 +4,12 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./dnsendpoint.yaml
-  - ./secret.sops.yaml
+  - ./externalsecret.yaml
   - ./helmrelease.yaml
+  - ./secret.sops.yaml
 configMapGenerator:
-  - name: cloudflared-configmap
+  - name: cloudflare-tunnel-configmap
     files:
-      - ./configs/config.yaml
+      - config.yaml=./resources/config.yaml
 generatorOptions:
   disableNameSuffixHash: true
