--- a/kubernetes/apps/network/unifi-dns/app/helmrelease.yaml
+++ b/kubernetes/apps/network/unifi-dns/app/helmrelease.yaml
@@ -3,7 +3,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: &app internal-external-dns
+  name: &app unifi-dns
 spec:
   interval: 1h
   chart:
@@ -12,8 +12,8 @@ spec:
       version: 1.15.2
       sourceRef:
         kind: HelmRepository
-        name: external-dns
-        namespace: flux-system
+        name: unifi-dns
+        namespace: network
   install:
     remediation:
       retries: 3
@@ -39,7 +39,7 @@ spec:
           - name: UNIFI_API_KEY
             valueFrom:
               secretKeyRef:
-                name: &secret internal-external-dns-secret
+                name: &secret unifi-dns-secret
                 key: UNIFI_API_KEY
         livenessProbe:
           httpGet:
