update gatus configs

--- a/kubernetes/apps/observability/gatus/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/gatus/app/helmrelease.yaml
@@ -93,9 +93,11 @@ spec:
             port: *port
     route:
       app:
-        hostnames: ["status.${SECRET_DOMAIN}"]
+        hostnames:
+          - "{{ .Release.Name }}.igloo.sh"
+          - status.igloo.sh
         parentRefs:
-          - name: internal
+          - name: external
             namespace: kube-system
             sectionName: https
         rules:
