--- a/kubernetes/apps/volsync-system/snapshot-controller/app/helmrepository.yaml
+++ b/kubernetes/apps/volsync-system/snapshot-controller/app/helmrepository.yaml
@@ -4,7 +4,7 @@ apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
   name: piraeus
-  namespace: flux-system
+  namespace: volsync-system # Required for Renovate lookups
 spec:
   interval: 12h
   url: https://piraeus.io/helm-charts/
